2001-09-05  Eric B Blake  <eblake@ee.byu.edu>

	* src/segment.h (PairSegment, TripletSegment):
	* src/op.h (Operators):
	* src/op.cpp (opline):
	* src/platform.h (Ostream):
	* src/body.cpp (ProcessLocalVariableDeclarationStatement): Fix
	compiler warnings on HP-UX 11.00 aCC.

2001-09-05  Ian P. Cardenas  <ian.cardenas@emagine-solutions.com>

	* src/semantic.h (AddDependence): changed pedantic error reporting
	to use ReportSemError as to avoid segfault when error is NULL -
	patch 108, from bug 491.

2001-09-05  Eric Blake  <ebb9@email.byu.edu>

	* src/platform.h (Ostream operator<<): Add missing
	operator<<(ostream&(&)(ostream&)).
	* src/access.h:
	* src/ast.cpp:
	* src/bytecode.cpp:
	* src/class.h:
	* src/control.cpp:
	* src/decl.cpp:
	* src/definite.cpp:
	* src/depend.cpp:
	* src/dump.cpp:
	* src/error.cpp:
	* src/getclass.cpp:
	* src/incrmnt.cpp:
	* src/jikesapi.cpp:
	* src/op.cpp:
	* src/stream.cpp:
	* src/unparse.cpp: Use endl instead of '\n' for platform
	independence.

2001-09-04  Eric Blake  <ebb9@email.byu.edu>

	* depcomp: One more autotool file, but only useful when
	configuring with dependency tracking enabled.
	* src/.cvsignore: Add gencode.class.
	* ChangeLog: Fix some whitespace issues.

2001-09-04  Eric Blake  <ebb9@email.byu.edu>
	    Chris Abbey  <jikes@cabbey.net>

	* .cvsignore:
	* doc/.cvsignore:
	* src/.cvsignore: Add for convenience.
	* AUTHORS:
	* COPYING:
	* HACKING:
	* INSTALL:
	* NEWS:
	* TODO: Some updates in preparation for 1.15.
	* src/m4/ac_find_encoding.m4:
	* configure.in: Fix some bugs with the autotool chain, add
	--enable-debug to configuration - patch 127.
	* Makefile.in:
	* aclocal.m4:
	* config.guess:
	* config.sub:
	* configure:
	* missing:
	* mkinstalldirs:
	* doc/Makefile.in:
	* src/Makefile.in:
	* src/config.h.in: Regen with latest version of Autotools.

2000-09-04  Eric Blake  <ebb9@email.byu.edu>

	* src/body.cpp (ProcessLocalVariableDeclarationStatement)
	(ProcessExecutableBodies): Reduce check for local variable/formal